# narration-cli

./: .gitignore  README.md  SKILL.md  pyproject.toml
agents/: openai.yaml
src/narration_cli/: __init__.py  __main__.py  cli.py  minimax.py
tests/: test_cli.py
