[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "narration-cli"
version = "0.1.0"
description = "A command-line client for converting text to speech with MiniMax."
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "vaxin" }]
dependencies = []

[project.scripts]
narrate = "narration_cli.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
